// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardsVisualizationModifierButtons with all cards collapsed 1`] = `
<div
  className="cardsVisualizationModifiersContainer"
>
  <CustomizedActionButton
    aria-expanded={false}
    className="expandCollapseAllButton"
    iconProps={
      Object {
        "iconName": "ChevronRight",
      }
    }
    onClick={[Function]}
  >
    Expand all
  </CustomizedActionButton>
  <StyledToggleBase
    checked={true}
    className="visualHelperToggle"
    label="Visual helper"
    onClick={[Function]}
  />
</div>
`;

exports[`CardsVisualizationModifierButtons with all cards not collapsed 1`] = `
<div
  className="cardsVisualizationModifiersContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="expandCollapseAllButton"
    iconProps={
      Object {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
  >
    Collapse all
  </CustomizedActionButton>
  <StyledToggleBase
    checked={true}
    className="visualHelperToggle"
    label="Visual helper"
    onClick={[Function]}
  />
</div>
`;
